--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -142,13 +142,13 @@ jobs:
         with:
           node-version: 16
 
-      - name: Codeclimate
-        uses: paambaati/codeclimate-action@v3.2.0
-        env:
-          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
-        with:
-          coverageLocations: |
-            ${{github.workspace}}/coverage/*.lcov:lcov
+#      - name: Codeclimate
+#        uses: paambaati/codeclimate-action@v3.2.0
+#        env:
+#          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+#        with:
+#          coverageLocations: |
+#            ${{github.workspace}}/coverage/*.lcov:lcov
 
       - name: Install deps
         # https://github.com/npm/cli/issues/4600
